<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{aa5d9f65-4fbf-4ab0-9237-d2df44e41fcb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	ProductGedetecteerd1 : BOOL;	
	ProductGedetecteerd2 : BOOL;
	MotorStatus : BOOL;
	TransportBandSnelheid : REAL;
	
	Timer : TON;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>